unify config files

--- a/config/local-dev-config.yml
+++ b/config/local-dev-config.yml
@@ -29,10 +29,10 @@ containerCore:
     authEnabled: false
 
 vdi:
+  siteBuild: ${env:SITE_BUILD}
+
   restService:
     enableJerseyTrace: true
-
-  siteBuild: ${env:SITE_BUILD}
 
   objectStore:
     bucketName: vdi
@@ -56,10 +56,6 @@ vdi:
       routing:
         key: vdi-bucket-notifications
 
-  daemons:
-    reconciler:
-      enabled: false
-
   kafka:
     servers:
     - kafka:9092
@@ -76,6 +72,7 @@ vdi:
       dataTypes:
       - name: bigwigfiles
         version: 1.0
+        category: foo
       projectIds: *genomicsProjects
     biom:
       server: biom:80
@@ -85,18 +82,13 @@ vdi:
         version: 1.0
       projectIds:
       - MicrobiomeDB
-    example:
-      server: example:80
-      displayName: Example
-      dataTypes:
-      - name: noop
-        version: 1.0
     genelist:
       server: genelist:80
       displayName: Gene List
       dataTypes:
       - name: genelist
         version: 1.0
+        category: foo
       projectIds: *genomicsProjects
     isasimple:
       server: isasimple:80
@@ -104,6 +96,7 @@ vdi:
       dataTypes:
       - name: isasimple
         version: 1.0
+        category: foo
       projectIds:
       - ClinEpiDB
     noop:
@@ -112,6 +105,7 @@ vdi:
       dataTypes:
       - name: lightweight
         version: 1.0
+        category: foo
       typeChangesEnabled: true
     phenotype:
       server: wrangler:80
@@ -119,6 +113,7 @@ vdi:
       dataTypes:
       - name: phenotype
         version: 1.0
+        category: foo
       projectIds: *genomicsProjects
     rnaseq:
       server: rnaseq:80
@@ -126,6 +121,7 @@ vdi:
       dataTypes:
       - name: rnaseq
         version: 1.0
+        category: foo
       projectIds: *genomicsProjects
 
   installTargets:
@@ -255,3 +251,6 @@ vdi:
     dataDb: *dbConfig
     enabled: ${env:UNIDB_ENABLED:-false}
 
+  daemons:
+    reconciler:
+      enabled: false
