--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,16 +34,30 @@ services:
       com.centurylinklabs.watchtower.enable: "${CACHE_DB_WATCHTOWER:-true}"
 
   kafka:
-    image: veupathdb/apache-kafka:${KAFKA_TAG:-prod}
+    image: apache/kafka:4.1.0
     healthcheck:
-      test: nc -z localhost 9092 || exit 1
+      test: nc -z 0.0.0.0 9092
       start_period: 30s
       start_interval: 5s
       interval: 30s
       timeout: 5s
       retries: 5
     networks:
-    - internal
+      internal:
+        aliases:
+        - kafka
+    environment:
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: broker,controller
+      KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@localhost:9093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     labels:
       com.centurylinklabs.watchtower.enable: "${KAFKA_WATCHTOWER:-true}"
 
