--- a/config/local-dev-config.yml
+++ b/config/local-dev-config.yml
@@ -84,15 +84,14 @@ vdi:
       server: bigwig:80
       dataTypes:
       - name: bigwigfiles
-        displayName: bigWig
+        category: bigWig
         version: 1.0
-        category: foo
       projectIds: *genomicsProjects
     biom:
       server: biom:80
       dataTypes:
       - name: biom
-        displayName: BIOM
+        category: BIOM
         version: 1.0
       projectIds:
       - MicrobiomeDB
@@ -100,49 +99,43 @@ vdi:
       server: example:80
       dataTypes:
       - name: example
-        displayName: Example
-        category: example
+        category: Example
         version: 1.0
     genelist:
       server: genelist:80
       dataTypes:
       - name: genelist
-        displayName: Gene List
+        category: Gene List
         version: 1.0
-        category: foo
       projectIds: *genomicsProjects
     isasimple:
       server: isasimple:80
       dataTypes:
       - name: isasimple
-        displayName: ISA Study
+        category: ISA Study
         version: 1.0
-        category: foo
       projectIds:
       - ClinEpiDB
     noop:
       server: noop:80
       dataTypes:
       - name: lightweight
-        displayName: Lightweight
+        category: Lightweight
         version: 1.0
-        category: foo
       typeChangesEnabled: true
     wrangler:
       server: wrangler:80
       dataTypes:
       - name: phenotype
-        displayName: Phenotype
+        category: Phenotype
         version: 1.0
-        category: foo
       projectIds: *genomicsProjects
     rnaseq:
       server: rnaseq:80
       dataTypes:
       - name: rnaseq
-        displayName: RNA-Seq
+        category: RNA-Seq
         version: 1.0
-        category: foo
       projectIds: *genomicsProjects
 
   installTargets:
