add data dictionary flag to data type options

--- a/config/local-dev-config.yml
+++ b/config/local-dev-config.yml
@@ -88,6 +88,7 @@ vdi:
         # 500MiB
         maxFileSize: 524288000
         allowedFileExtensions: [ ".bw" ]
+        usesDataDict: true
       projectIds: *genomicsProjects
     biom:
       server: biom:80
