--- a/config/production-config.yml
+++ b/config/production-config.yml
@@ -75,6 +75,7 @@ vdi:
         # 500MiB
         maxFileSize: 524288000
         allowedFileExtensions: [ ".bw" ]
+        usesDataDict: true
       projectIds: *genomicsProjects
     biom:
       server: biom:80
