--- a/config/local-dev-config.yml
+++ b/config/local-dev-config.yml
@@ -88,7 +88,7 @@ vdi:
         # 500MiB
         maxFileSize: 524288000
         allowedFileExtensions: [ ".bw" ]
-        usesDataDict: true
+        usesDataProperties: true
       projectIds: *genomicsProjects
     biom:
       server: biom:80
@@ -128,6 +128,15 @@ vdi:
         category: Lightweight
         version: 1.0
       typeChangesEnabled: true
+    rnaseq:
+      server: rnaseq:80
+      dataTypes:
+      - name: rnaseq
+        category: RNA-Seq
+        version: 1.0
+        # 10GiB
+        maxFileSize: 10737418240
+      projectIds: *genomicsProjects
     wrangler:
       server: wrangler:80
       dataTypes:
@@ -137,15 +146,6 @@ vdi:
         # 10GiB
         maxFileSize: 10737418240
         allowedFileExtensions: [ ".txt", ".tsv" ]
-      projectIds: *genomicsProjects
-    rnaseq:
-      server: rnaseq:80
-      dataTypes:
-      - name: rnaseq
-        category: RNA-Seq
-        version: 1.0
-        # 10GiB
-        maxFileSize: 10737418240
       projectIds: *genomicsProjects
 
   installTargets:
