--- a/env/example.partial-local.env
+++ b/env/example.partial-local.env
@@ -1,6 +1,14 @@
 # Enum: n | s
 LOCATION_INDICATOR=n
 
+# App DB Config
+APP_DB_USERNAME=
+APP_DB_PASSWORD=
+APP_DB_SERVER=
+APP_DB_NAME=
+APP_DB_CTRL_SCHEMA=
+APP_DB_DATA_SCHEMA=
+
 # Config Mount
 CONFIG_MOUNT_SOURCE=stack-config.yml
 
@@ -24,8 +32,8 @@ CACHE_DB_TAG=latest
 PLUGIN_BIGWIG_TAG=latest
 PLUGIN_BIOM_TAG=latest
 PLUGIN_EXAMPLE_TAG=latest
-PLUGIN_GENELIST_TAG=latest
 PLUGIN_NOOP_TAG=latest
+PLUGIN_GENELIST_TAG=latest
 PLUGIN_ISASIMPLE_TAG=latest
 PLUGIN_RNASEQ_TAG=latest
 PLUGIN_WRANGLER_TAG=latest
