--- a/config/full-local-dev-config.yml
+++ b/config/full-local-dev-config.yml
@@ -98,6 +98,7 @@ vdi:
         version: 1.0
         # 100MiB
         maxFileSize: 104857600
+        allowedFileExtensions: [ ".biom" ]
       projectIds:
       - MicrobiomeDB
     example:
