--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ Thumbs.db:encryptable
 
 dev/fully-local/*
 !dev/fully-local/makefile
+!dev/fully-local/phony-app-db
 !dev/fully-local/phony-app-db/Dockerfile
 !dev/fully-local/docker-compose.db.yml
 
