--- a/config/full-local-dev-config.yml
+++ b/config/full-local-dev-config.yml
@@ -4,6 +4,7 @@ definitions:
   genomicsProjects: &genomicsProjects
   - AmoebaDB
   - CryptoDB
+  - DataExplorer
   - FungiDB
   - GiardiaDB
   - HostDB
@@ -14,7 +15,7 @@ definitions:
   - TrichDB
   - TriTrypDB
   - VectorBase
-  - VEuPathDB
+  - UniDB
   ctrlDbConfig: &ctrlDbConfig
     username: testUsername
     password: testPassword
